# python_project

./: pyproject.toml
.github/workflows/: pytest-actions.yml
Functions/: acceptable_password.py  all_upper.py  backward_string.py  beginnin_zeros.py  beginning_markers.py  correct_sentence.py  easy_unpack.py  end_zeros.py  first_word.py  is_even.py  max_digit.py  most_frequency.py  mult_two.py  number_length.py  remove_all_before.py  replace_first.py  split_pairs.py  test_acceptable_password.py  test_backward_string.py  test_beginning_zeros.py  test_between_markers.py  test_correct_sentence.py  test_easy_unpack.py  test_end_zeros.py  test_first_word.py  test_is_all_upper.py  test_is_even.py  test_max_digit.py  test_most_frequent.py  test_mult_two.py  test_number_length.py  test_remove_all_before.py  test_replace_first.py  test_split_pairs.py
